# imgclr

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  build.bat  build.zig  compile_release.bat  compile_release.sh  go.mod  imgclr.asm  main.c  mclr  mclr.py  stephen-leonardi-unsplash.ppm  testoutput.ppm  testoutput.ppm.xmp  text  xres.sh
include/EQUATES/: COMCTL64.INC  COMDLG64.INC  USER64.INC
libs/: stb_image.c
libs/stb_ds-v0.67/: stb_ds.h
libs/stb_image-v2.27/: stb_image.c  stb_image.h
libs/stb_image_write-v1.16/: stb_image_write.c
libs/wrappers/stb_image/: stb_image.odin  stb_image_write.odin
release/: imgclr-v0.1-dev-aarch64-linux  imgclr-v0.1-dev-aarch64-macos  imgclr-v0.1-dev-x86_64-linux  imgclr-v0.1-dev-x86_64-macos
src/: args.c  args.h  args.zig  base.c  clr.h  colour.c  colour.zig  dither.c  dither.h  dither.rs  dither.zig  farbfeld.c  int_types.h  main.c  main.go  main.odin  main.rs  main.zig  stbi.c
src/args/: args.odin
src/colour/: colour.odin
