[package]
name = "imgclr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# argument parsing
clap = { version = "3.0", features = ["derive"] }
# exiting with appropriate error codes
exitcode = "1.1.2"
# processing images of various formats
image = "0.24.2"
# working with colour
color_processing = "0.6.1"
