[package]
name = "imgclr"
version = "0.1.0"
edition = "2021"

[profile.release-with-debug]
inherits = "release"
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# argument parsing
clap = { version = "3.2.8", features = ["derive"] }

# coloured output
colored = "2.0.0"

# working with colour
color_processing = "0.6.1"

# processing images of various formats
image = "0.24.2"

# progress bar
indicatif = "0.16.2"
